--- a/gurukul-backend/src/main/resources/application.properties
+++ b/gurukul-backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=gurukul-backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/gurukul
+spring.datasource.username=gurukul
+spring.datasource.password=gurukul
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional but useful
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
